exposing the port of the application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,5 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=contactManager
+    networks:
+      - default
